--- a/client/css/style.css
+++ b/client/css/style.css
@@ -601,7 +601,8 @@ font-size: 1.1em;
 /* country */
 
 .filter-group {
-  margin: 15px 0;
+  /*margin: 15px 0;*/
+  max-height: 60px;
 }
 
 .filter-group .btn, .modal-content .btn {
@@ -658,16 +659,17 @@ font-size: 1.1em;
 
 .circle-tooltip {
   position: absolute;
+  height: 20px;
   background: #333;
   color: #ddd;
-  padding: 2px;
+  opacity: 0;
   border: 0px;
   border-radius: 5px;
-  opacity: 0;
-  text-align: center;
+  padding: 2px;
   margin-top: -20px;
-  pointer-events: none;
+  text-align: center;
   font-size: 11px;
+  pointer-events: none;
 }
 
 #select-lineChart{
@@ -840,4 +842,10 @@ path.lineTrajectory {
   fill: none;
   stroke: #ccc;
   stroke-width: 1.5px;
+}
+
+.bar {
+  padding-left: 2px;
+  padding-right: 2px;
+  border-left:  solid 1px white;
 }
