fix bug on linechart

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -824,7 +824,7 @@ path.lineTrajectory {
   background-color: red;
 }*/
 
-.node {
+/*.node {
   cursor: pointer;
 }
 
@@ -848,4 +848,21 @@ path.lineTrajectory {
   padding-left: 2px;
   padding-right: 2px;
   border-left:  solid 1px white;
+}*/
+
+/*circle packing*/
+/*circle {
+  fill: rgb(31, 119, 180);
+  fill-opacity: .25;
+  stroke: rgb(31, 119, 180);
+  stroke-width: 1px;
 }
+
+.leaf circle {
+  fill: #ff7f0e;
+  fill-opacity: 1;
+}
+
+text {
+  font: 10px sans-serif;
+}*/
