home view template

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,6 +1,6 @@
-<div class="container" >
+<!-- <div class="container" >
 	<h1>Projet RICardo</h1>
-	<p><strong>Le projet RICardo</strong> vise à construire une base de données commerciales regroupant des statistiques du commerce bilatéral des pays du monde sur la période 1800-1938, et à la mettre en ligne sous forme de visualisations. Commencé en 2004, ce projet a permis de construire une base de 270 000 flux d'échanges commerciaux (juin 2015) et il est prévu d'ouvrir le site web courant 2016.</p>	
+	<p>c</p>	
 </div>
 <div class="container">
 	<p>Vous trouverez ci-dessous les deux <em>working paper</em> qui ont été soumis pour le premier à la revue <em>Historical Methods</em> et le second à l'<em><a href="http://dh2016.adho.org/">Digital Humanities 2016</a></em>.</p>
@@ -23,4 +23,103 @@
 		</div>
 		
 	</div>
+</div> -->
+<div class="view-page container-fluid">
+  <div top-menu class="row"></div>
+
+  <div>
+    <div id="homeImage" class="row">
+      <img ng-src="../img/ricepaper_v3.png" id="backHomeImage"/>
+      <div>
+        <h2 id="imgTitle">RICardo</h2>
+        <p id="imgSubtitle">Bilateral trade of all of the world’s countries over the period 1800-1938</p>
+      </div>
+      <!-- <img ng-src="images/medea_front-01.png" id="frontHomeImage"/> -->
+    </div>
+    <div class="container">
+      <div >
+        <div id="homeSubtitle">
+          Le projet <strong>RICardo</strong> vise à construire une base de données commerciales regroupant des statistiques du commerce bilatéral des pays du monde sur la période 1800-1938, et à la mettre en ligne sous forme de visualisations. Commencé en 2004, ce projet a permis de construire une base de 270 000 flux d'échanges commerciaux (juin 2015) et il est prévu d'ouvrir le site web courant 2016.
+        </div>
+        </br>
+        <p>Vous trouverez ci-dessous les deux <em>working paper</em> qui ont été soumis pour le premier à la revue <em>Historical Methods</em> et le second à l'<em><a href="http://dh2016.adho.org/">Digital Humanities 2016</a></em>.</p>
+        <p>Ces papiers sont tels que soumis et non dans leurs versions finales.</p>
+        <div class="row workingPaperContainer">
+          <div class="col-md-6 workingPaper">
+            <h4>Abstract DH2016</h4>
+            <ul>
+              <li>
+                <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_fr.pdf">abstract Ricardo DH 2016 (fr)</a>
+              </li>
+              <li>
+                <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_en.pdf">abstract Ricardo DH 2016 (en)</a> 
+              </li> 
+            </ul>
+          </div>
+          <div class="col-md-6 workingPaper">
+            <h4>Historical Methods</h4>
+            <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Working paper historical methods (en) </a>
+          </div>
+        </div>
+      </div>
+      <div id="studies" class="page">
+        <div class="container">
+          <div class="spaceBetweenParagraphs noFloat">&bull;</div>
+          <div>
+            <div class="thumbnailStudy" id="studies">
+              <span class="studyTitle">General informations</span>
+
+            </div>
+            <ol class="storylinesContainer">
+              <li class="storyline">
+
+                <!-- <div class="slImage" >
+                  <img width="200" class="backgroundSL" />
+                  <a ng-href="" class="frontSL hidden">Explore this story</a>
+                </div> -->
+
+                <a ng-href="">
+                <div class="slInfo">
+                  <h5 class="slTitle">Reporting & Partner</h5>
+                  <p class="slPara">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut ullamcorper massa. Donec consequat, orci at vulputate porta, purus nisl vulputate ante, eu rutrum dui lectus ac lectus. Proin non orci tincidunt, placerat dolor non, pulvinar risus.
+                  </p>
+
+                </div>
+                </a>
+              </li>
+              <li class="storyline">
+
+                <!-- <div class="slImage" >
+                  <img width="200" class="backgroundSL" />
+                  <a ng-href="" class="frontSL hidden">Explore this story</a>
+                </div> -->
+
+                <a ng-href=""><div class="slInfo">
+                  <h5 class="slTitle">World trade agregation</h5>
+                  <p class="slPara"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut ullamcorper massa. Donec consequat, orci at vulputate porta, purus nisl vulputate ante, eu rutrum dui lectus ac lectus. Proin non orci tincidunt, placerat dolor non, pulvinar risus.</p>
+
+                </div></a>
+              </li>
+              <li class="storyline">
+
+                <!-- <div class="slImage" >
+                  <img width="200" class="backgroundSL" />
+                  <a ng-href="" class="frontSL hidden">Explore this story</a>
+                </div> -->
+
+                <a ng-href=""><div class="slInfo">
+                  <h5 class="slTitle">Change rate</h5>
+                  <p class="slPara"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut ullamcorper massa. Donec consequat, orci at vulputate porta, purus nisl vulputate ante, eu rutrum dui lectus ac lectus. Proin non orci tincidunt, placerat dolor non, pulvinar risus.</p>
+
+                </div></a>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row noFloat" footer/>
 </div>
+
