--- a/client/css/style.css
+++ b/client/css/style.css
@@ -183,7 +183,194 @@ body > .container {
   padding-left: 15px;
 }
 
-/* Components*/
+/* Home */
+
+#homeImage {
+  height: 300px;
+  text-align: center;
+  /*background-color: #57AACE;*/
+  margin-bottom: 40px;
+  position: relative;
+  overflow-x: hidden;
+  
+}
+
+#backHomeImage {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  background-repeat: repeat;
+}
+
+#imgTitle {
+   position: absolute; 
+   top: 100px; 
+   left: 0; 
+   width: 100%;
+}
+
+#imgSubtitle {
+  position: absolute; 
+   top: 170px; 
+   left: 0; 
+   width: 100%;
+}
+
+#homeSubtitle, #studiesAbstract {
+  font-family: 'montserrat';
+  font-size: 20px;
+  line-height: 40px;
+}
+
+.workingPaperContainer {
+  margin-top: 40px;
+}
+
+.workingPaper {
+  text-align: center;
+}
+
+.workingPaper ul {
+list-style-type: none;
+padding:0; margin:0;
+  
+}
+
+.spaceBetweenParagraphs {
+  width: 100%;
+  height: 120px;
+  font-size: 60px;
+  line-height: 120px;
+  text-align: center;
+  color: #999;
+}
+
+.study{
+  margin: 20px 0;
+}
+
+.descriptions {
+  font-size: 14px;
+  line-height: 30px;
+}
+.studyDescription {
+  /*margin-top: 10px;*/
+  font-family: 'montserrat';
+  font-weight: 400;
+  padding: 10px 0px;
+  font-size: 14px;
+  line-height: 26px;
+}
+
+ol.storylinesContainer {
+  list-style-type: none;
+  margin-top: 30px;
+  padding-left: 0;
+}
+li.storyline {
+  font-family: 'Merriweather-Light';
+  font-size: 12px;
+  padding-bottom: 40px;
+  line-height: 26px;
+}
+.exploreContainer {
+  width: 100%;
+  text-align: left;
+}
+.exploreButton {
+  font-family: 'montserrat';
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 10px;
+  font-weight: 700;
+  background-color: #57AACE;
+  border: none;
+  color: white;
+}
+.study{
+  margin: 20px 0;
+}
+.thumbnailStudy {
+  position: relative;
+}
+.backStudies {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+.frontStudies {
+  z-index: 1;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateY(-50%) translateX(-50%);
+  -moz-transform: translateY(-50%) translateX(-50%);
+  transform: translateY(-50%) translateX(-50%);
+  top: 75px;
+}
+.studyTitle {
+  font: 20px 'montserrat';
+  font-weight: 100;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: black;
+}
+.authorName {
+  font-style: italic;
+  font-size: 11px;
+  width: 100%;
+  padding-bottom: 5px;
+  margin-top: -5px;
+}
+.storyline {
+  clear: both;
+}
+
+.storyline a {
+  text-decoration: none;
+}
+
+.slImage {
+  /*display: block;*/
+  position: relative;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  float: left;
+  z-index: 1;
+}
+
+.slTitle{
+  font-family: 'montserrat';
+  font-size: 16px;
+}
+
+.slPara {
+  color: #999;
+}
+
+.frontSL {
+  display: block;
+  position: relative;
+  margin-top: -200px;
+  line-height: 200px;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  font-family: 'montserrat';
+  font-size: 14px;
+  color: white;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-color: rgba(87, 170, 206,0.8);
+  z-index: 2;
+}
+
+.frontSL:active, .frontSL:hover {
+  color: white;
+}
+
+
+
 
 
 /* navbar */
@@ -833,7 +1020,7 @@ path.lineTrajectory {
   background-color: red;
 }*/
 
-/*.node {
+.node {
   cursor: pointer;
 }
 
@@ -857,7 +1044,7 @@ path.lineTrajectory {
   padding-left: 2px;
   padding-right: 2px;
   border-left:  solid 1px white;
-}*/
+}
 
 /*circle packing*/
 /*circle {
